@@ -22,7 +22,6 @@ my $transform = Music::Chord::Progression::Transform->new(
     base_octave   => $octave,
     chord_quality => $quality,
     transforms    => $transforms,
-    format        => 'midinum',
     verbose       => 1,
 );
 my ($generated) = $transform->generate;
