@@ -1,6 +1,7 @@
 Revision history for Music-Chord-Progression-Transform
 
 {{$NEXT}}
+    - Change the default format from ISO to midinum.
 
 0.0205 2023-02-06 00:15:01
     - Handle the naming of the diminished chord.
